infra/manifests/nocodb/statefulset-postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nocodb-postgres
spec:
  selector:
    matchLabels:
      app: nocodb-postgres
  serviceName: nocodb-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: nocodb-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17-alpine
        ports:
        - containerPort: 5432
          name: pgport
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 10Gi
