infra/manifests/nocodb/service-nocodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nocodb-nocodb
spec:
  selector:
    app: nocodb-nocodb
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
