infra/manifests/nocodb/service-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nocodb-postgres
spec:
  clusterIP: None
  selector:
    app: nocodb-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
