infra/manifests/nocodb/service-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nocodb-redis
spec:
  clusterIP: None
  selector:
    app: nocodb-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
