infra/manifests/nocodb/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nocodb
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 8443
    protocol: HTTPS
    hostname: nocodb.techwerkers.nl
    tls:
      mode: Terminate
      certificateRefs:
      - name: nocodb-tls
        namespace: nocodb
